--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,7 +31,7 @@ website:
       - icon: linkedin
         href: https://www.linkedin.com/in/karl4marquez/
   cookie-consent:
-    type: implied
+    type: express
     style: simple
     palette: light
         
